--- a/package.json
+++ b/package.json
@@ -11,14 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andres-liiver/kiwi.git"
+    "url": "http://hektor1.ttu.ee/git/scm/tarvo_nikkel/tarkvara_nikkel.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/andres-liiver/kiwi/issues"
-  },
-  "homepage": "https://github.com/andres-liiver/kiwi#readme",
   "devDependencies": {
     "jasmine": "^2.3.2",
     "karma": "^0.13.10",
